# wordgrind_compiler

./: .gitignore  Cargo.toml  Makefile  README.org  build.rs  docs.org  issues.org  main.c  o_p_conventions.org  parser.c  parser.h  test_4.wg
src/: ackermann.wg  action_compiling_idea.js  actions_example.html  add.wg  compiled.js  compiled_example.js  deck_system.yaml  decks.wg  decks_preds.wg  example.html  family.wg  ifelse_draft.js  js_emission.rs  main.rs  main.yaml  mistake_counter.txt  parser.rs  pseudolists.wg  rewrite_passes.rs  runme.html  stylesheet.css  stylesheet.scss  test_4.wg  testytest.wg  tl_database.rs  train_stations.wg  walk_around.yaml  yaml_parser.rs
src/js_assets/: builtin.js  node_debugger.js  runtime.js
