[package]
name = "wordgrind_compiler"
version = "0.1.1"
authors = ["janwanot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
bindgen = "0.54.1"
cc = "1.0.59"

[dependencies]
indoc = "1.0"
itertools = "0.7.11"
yaml-rust = "0.4.5"
unicode-segmentation = "1.7.1"
notify = "4.0.17"